# create-grafana-plugin

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh.md  biome.json  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  lib.rs  main.rs  scaffold.rs  template.rs  updater.rs
cli/templates/app/src/components/: AppConfig.tsx.tera
cli/templates/base/: README.md.tera  biome.json  package.json.tera  plugin.json.tera  rspack.config.js.tera  tsconfig.json.tera  tsconfig.test.json.tera
cli/templates/base/.github/workflows/: ci.yml.tera
cli/templates/base/scripts/: clean-plugin-dist.ts.tera
cli/templates/base/src/: module.ts.tera
cli/templates/base/tests/setup/: happydom.ts
cli/templates/base/tests/unit/: smoke.test.ts
cli/templates/datasource/src/: datasource.ts.tera  module.ts.tera
cli/templates/datasource/src/components/: QueryEditor.tsx.tera
cli/templates/docker/: docker-compose.yml.tera
cli/templates/docker/provisioning/dashboards/: dashboards.yml.tera
cli/templates/docker/provisioning/datasources/: datasources.yml.tera
cli/templates/docker/provisioning/loki/: config.yml.tera
cli/templates/mock/otel-mock/: Cargo.toml.tera  Dockerfile.tera
cli/templates/mock/otel-mock/src/: graph.rs.tera  main.rs.tera  openmetrics_exemplars.rs.tera
cli/templates/mock/provisioning/dashboards/: otel-mock-dashboard.json.tera
cli/templates/wasm/src/services/: wasm-bridge.ts.tera
cli/tests/: e2e.rs  scaffold_docker.rs  scaffold_panel.rs  scaffold_wasm.rs  template_test.rs  update_dry_run.rs
cli/tests/common/: mod.rs
(+58 files in other folders)
