[workspace]
members = ["cli"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["andeya <andeyalee@gmail.com>"]
license = "MIT"
repository = "https://github.com/andeya/create-grafana-plugin"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "allow"
must_use_candidate = "allow"
