[package]
name = "create-grafana-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "CLI tool to scaffold production-ready Grafana plugin projects"

[[bin]]
name = "create-grafana-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tera = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
similar = "2"
chrono = "0.4"
walkdir = "2"
base64 = "0.22"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
